z-index fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ header{
     align-items: center;
     padding: 0 5%;
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 header::after{
     animation: noise 8s steps(10) infinite;
